<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:columnCount="5"
    android:padding="@dimen/default_padding"
    android:useDefaultMargins="true"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="5"
        android:layout_gravity="fill_horizontal"
        android:textSize="@dimen/result_size"
        android:gravity="end"
        android:padding="@dimen/default_padding"
        tools:text="433"
        />

    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/key_7"
        android:layout_columnWeight="1"
        android:layout_margin="2dp"
        android:backgroundTint="#376bc8"
        android:elevation="2dp"
        android:stateListAnimator="@null"
        android:translationZ="2dp"/>

    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/key_8"
        android:layout_columnWeight="1"
        android:layout_margin="2dp"
        android:backgroundTint="#376bc8"
        android:elevation="2dp"
        android:stateListAnimator="@null"
        android:translationZ="4dp"/>

    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/key_9"
        android:layout_columnWeight="1"
        android:layout_margin="2dp"
        android:backgroundTint="#376bc8"
        android:elevation="2dp"
        android:stateListAnimator="@null"
        android:translationZ="2dp"/>

    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/key_div"
        android:layout_columnWeight="1"
        android:layout_margin="2dp"
        android:backgroundTint="#376bc8"
        android:elevation="2dp"
        android:stateListAnimator="@null"
        android:translationZ="2dp"/>

    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/key_reset"
        android:layout_columnWeight="1"
        android:layout_margin="2dp"
        android:backgroundTint="#376bc8"
        android:elevation="2dp"
        android:stateListAnimator="@null"
        android:translationZ="2dp"/>

    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/key_4"
        android:layout_columnWeight="1"
        android:layout_margin="2dp"
        android:backgroundTint="#376bc8"
        android:elevation="2dp"
        android:stateListAnimator="@null"
        android:translationZ="2dp"/>

    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/key_5"
        android:layout_columnWeight="1"
        android:layout_margin="2dp"
        android:backgroundTint="#376bc8"
        android:elevation="2dp"
        android:stateListAnimator="@null"
        android:translationZ="2dp"/>

    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_row="1"
        android:layout_column="4"
        android:layout_columnWeight="1"
        android:layout_margin="2dp"
        android:backgroundTint="#376bc8"
        android:elevation="2dp"
        android:stateListAnimator="@null"
        android:text="@string/key_6"
        android:translationZ="2dp" />

    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/key_mult"
        android:layout_columnWeight="1"
        android:layout_margin="2dp"
        android:backgroundTint="#376bc8"
        android:elevation="2dp"
        android:stateListAnimator="@null"
        android:translationZ="2dp"/>

    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:layout_margin="2dp"
        android:backgroundTint="#376bc8"
        android:elevation="2dp"
        android:stateListAnimator="@null"
        android:text="@string/key_del"
        android:translationZ="2dp" />

    <Button
        android:layout_width="70dp"
        android:layout_height="66dp"
        android:layout_columnWeight="1"
        android:layout_margin="2dp"
        android:backgroundTint="#376bc8"
        android:elevation="2dp"
        android:stateListAnimator="@null"
        android:text="@string/key_1"
        android:translationZ="2dp" />

    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/key_2"
        android:layout_columnWeight="1"
        android:layout_margin="2dp"
        android:backgroundTint="#376bc8"
        android:elevation="2dp"
        android:stateListAnimator="@null"
        android:translationZ="2dp"/>

    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/key_3"
        android:layout_columnWeight="1"
        android:layout_margin="2dp"
        android:backgroundTint="#376bc8"
        android:elevation="2dp"
        android:stateListAnimator="@null"
        android:translationZ="2dp"/>

    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/key_plus"
        android:layout_columnWeight="1"
        android:layout_margin="2dp"
        android:backgroundTint="#376bc8"
        android:elevation="2dp"
        android:stateListAnimator="@null"
        android:translationZ="2dp"/>

    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:layout_margin="2dp"
        android:backgroundTint="#376bc8"
        android:elevation="2dp"
        android:stateListAnimator="@null"
        android:text="@string/key_minus"
        android:translationZ="2dp" />

    <Button
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_columnSpan="3"
        android:text="@string/key_zero"
        android:layout_columnWeight="1"
        android:layout_margin="2dp"
        android:backgroundTint="#376bc8"
        android:elevation="2dp"
        android:stateListAnimator="@null"
        android:translationZ="2dp"/>

    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/key_dot"
        android:layout_columnWeight="1"
        android:layout_margin="2dp"
        android:backgroundTint="#376bc8"
        android:elevation="2dp"
        android:stateListAnimator="@null"
        android:translationZ="2dp"/>

    <Button
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/key_eq"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_margin="2dp"
        android:backgroundTint="#376bc8"
        android:elevation="2dp"
        android:stateListAnimator="@null"
        android:translationZ="2dp"/>



</GridLayout>

